// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comparison Container should match the snapshot with or without data 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ComparisonContainer
    compared1={
        Object {
            "districtAvg": 0.5,
            "location": "Colorado",
            "stats": Object {
              "2006": 0.5,
            },
          }
    }
    compared2={
        Object {
            "districtAvg": 0.8,
            "location": "ASPEN",
            "stats": Object {
              "2006": 0.8,
            },
          }
    }
    comparedAvg={
        Object {
            "ASPEN": 0.8,
            "Colorado": 0.5,
            "comparedd": 0.65,
          }
    }
    comparedDistrict={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <District
          compareDistrict={undefined}
          districtData={
                    Object {
                              "districtAvg": 0.5,
                              "location": "Colorado",
                              "stats": Object {
                                "2006": 0.5,
                              },
                            }
          }
          selected={true}
/>,
        <ComparisonWindow
          compared1={
                    Object {
                              "districtAvg": 0.5,
                              "location": "Colorado",
                              "stats": Object {
                                "2006": 0.5,
                              },
                            }
          }
          compared2={
                    Object {
                              "districtAvg": 0.8,
                              "location": "ASPEN",
                              "stats": Object {
                                "2006": 0.8,
                              },
                            }
          }
          comparedAvg={
                    Object {
                              "ASPEN": 0.8,
                              "Colorado": 0.5,
                              "comparedd": 0.65,
                            }
          }
/>,
        <District
          compareDistrict={undefined}
          districtData={
                    Object {
                              "districtAvg": 0.8,
                              "location": "ASPEN",
                              "stats": Object {
                                "2006": 0.8,
                              },
                            }
          }
          selected={true}
/>,
      ],
      "className": "comparison-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "compareDistrict": undefined,
          "districtData": Object {
            "districtAvg": 0.5,
            "location": "Colorado",
            "stats": Object {
              "2006": 0.5,
            },
          },
          "selected": true,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "compared1": Object {
            "districtAvg": 0.5,
            "location": "Colorado",
            "stats": Object {
              "2006": 0.5,
            },
          },
          "compared2": Object {
            "districtAvg": 0.8,
            "location": "ASPEN",
            "stats": Object {
              "2006": 0.8,
            },
          },
          "comparedAvg": Object {
            "ASPEN": 0.8,
            "Colorado": 0.5,
            "comparedd": 0.65,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "compareDistrict": undefined,
          "districtData": Object {
            "districtAvg": 0.8,
            "location": "ASPEN",
            "stats": Object {
              "2006": 0.8,
            },
          },
          "selected": true,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <District
            compareDistrict={undefined}
            districtData={
                        Object {
                                    "districtAvg": 0.5,
                                    "location": "Colorado",
                                    "stats": Object {
                                      "2006": 0.5,
                                    },
                                  }
            }
            selected={true}
/>,
          <ComparisonWindow
            compared1={
                        Object {
                                    "districtAvg": 0.5,
                                    "location": "Colorado",
                                    "stats": Object {
                                      "2006": 0.5,
                                    },
                                  }
            }
            compared2={
                        Object {
                                    "districtAvg": 0.8,
                                    "location": "ASPEN",
                                    "stats": Object {
                                      "2006": 0.8,
                                    },
                                  }
            }
            comparedAvg={
                        Object {
                                    "ASPEN": 0.8,
                                    "Colorado": 0.5,
                                    "comparedd": 0.65,
                                  }
            }
/>,
          <District
            compareDistrict={undefined}
            districtData={
                        Object {
                                    "districtAvg": 0.8,
                                    "location": "ASPEN",
                                    "stats": Object {
                                      "2006": 0.8,
                                    },
                                  }
            }
            selected={true}
/>,
        ],
        "className": "comparison-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "compareDistrict": undefined,
            "districtData": Object {
              "districtAvg": 0.5,
              "location": "Colorado",
              "stats": Object {
                "2006": 0.5,
              },
            },
            "selected": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "compared1": Object {
              "districtAvg": 0.5,
              "location": "Colorado",
              "stats": Object {
                "2006": 0.5,
              },
            },
            "compared2": Object {
              "districtAvg": 0.8,
              "location": "ASPEN",
              "stats": Object {
                "2006": 0.8,
              },
            },
            "comparedAvg": Object {
              "ASPEN": 0.8,
              "Colorado": 0.5,
              "comparedd": 0.65,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "compareDistrict": undefined,
            "districtData": Object {
              "districtAvg": 0.8,
              "location": "ASPEN",
              "stats": Object {
                "2006": 0.8,
              },
            },
            "selected": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Comparison Container should match the snapshot with or without data 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ComparisonContainer
    comparedDistrict={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="comparison-placeholder"
>
          Select a district to compare
</div>,
        <ComparisonWindow
          compared1={
                    Object {
                              "districtAvg": "",
                              "location": "",
                              "stats": Object {},
                            }
          }
          compared2={
                    Object {
                              "districtAvg": "",
                              "location": "",
                              "stats": Object {},
                            }
          }
          comparedAvg={
                    Object {
                              "compared": "--",
                            }
          }
/>,
        <div
          className="comparison-placeholder"
>
          Select a district to compare
</div>,
      ],
      "className": "comparison-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Select a district to compare",
          "className": "comparison-placeholder",
        },
        "ref": null,
        "rendered": "Select a district to compare",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "compared1": Object {
            "districtAvg": "",
            "location": "",
            "stats": Object {},
          },
          "compared2": Object {
            "districtAvg": "",
            "location": "",
            "stats": Object {},
          },
          "comparedAvg": Object {
            "compared": "--",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Select a district to compare",
          "className": "comparison-placeholder",
        },
        "ref": null,
        "rendered": "Select a district to compare",
        "type": "div",
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="comparison-placeholder"
>
            Select a district to compare
</div>,
          <ComparisonWindow
            compared1={
                        Object {
                                    "districtAvg": "",
                                    "location": "",
                                    "stats": Object {},
                                  }
            }
            compared2={
                        Object {
                                    "districtAvg": "",
                                    "location": "",
                                    "stats": Object {},
                                  }
            }
            comparedAvg={
                        Object {
                                    "compared": "--",
                                  }
            }
/>,
          <div
            className="comparison-placeholder"
>
            Select a district to compare
</div>,
        ],
        "className": "comparison-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Select a district to compare",
            "className": "comparison-placeholder",
          },
          "ref": null,
          "rendered": "Select a district to compare",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "compared1": Object {
              "districtAvg": "",
              "location": "",
              "stats": Object {},
            },
            "compared2": Object {
              "districtAvg": "",
              "location": "",
              "stats": Object {},
            },
            "comparedAvg": Object {
              "compared": "--",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Select a district to compare",
            "className": "comparison-placeholder",
          },
          "ref": null,
          "rendered": "Select a district to compare",
          "type": "div",
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Comparison Container should match the snapshot with or without data 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ComparisonContainer
    compared1={
        Object {
            "districtAvg": 0.5,
            "location": "Colorado",
            "stats": Object {
              "2006": 0.5,
            },
          }
    }
    compared2={undefined}
    comparedAvg={
        Object {
            "ASPEN": 0.8,
            "Colorado": 0.5,
            "comparedd": 0.65,
          }
    }
    comparedDistrict={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <District
          compareDistrict={undefined}
          districtData={
                    Object {
                              "districtAvg": 0.5,
                              "location": "Colorado",
                              "stats": Object {
                                "2006": 0.5,
                              },
                            }
          }
          selected={true}
/>,
        <ComparisonWindow
          compared1={
                    Object {
                              "districtAvg": 0.5,
                              "location": "Colorado",
                              "stats": Object {
                                "2006": 0.5,
                              },
                            }
          }
          compared2={
                    Object {
                              "districtAvg": "",
                              "location": "",
                              "stats": Object {},
                            }
          }
          comparedAvg={
                    Object {
                              "ASPEN": 0.8,
                              "Colorado": 0.5,
                              "comparedd": 0.65,
                            }
          }
/>,
        <div
          className="comparison-placeholder"
>
          Select a district to compare
</div>,
      ],
      "className": "comparison-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "compareDistrict": undefined,
          "districtData": Object {
            "districtAvg": 0.5,
            "location": "Colorado",
            "stats": Object {
              "2006": 0.5,
            },
          },
          "selected": true,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "compared1": Object {
            "districtAvg": 0.5,
            "location": "Colorado",
            "stats": Object {
              "2006": 0.5,
            },
          },
          "compared2": Object {
            "districtAvg": "",
            "location": "",
            "stats": Object {},
          },
          "comparedAvg": Object {
            "ASPEN": 0.8,
            "Colorado": 0.5,
            "comparedd": 0.65,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Select a district to compare",
          "className": "comparison-placeholder",
        },
        "ref": null,
        "rendered": "Select a district to compare",
        "type": "div",
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <District
            compareDistrict={undefined}
            districtData={
                        Object {
                                    "districtAvg": 0.5,
                                    "location": "Colorado",
                                    "stats": Object {
                                      "2006": 0.5,
                                    },
                                  }
            }
            selected={true}
/>,
          <ComparisonWindow
            compared1={
                        Object {
                                    "districtAvg": 0.5,
                                    "location": "Colorado",
                                    "stats": Object {
                                      "2006": 0.5,
                                    },
                                  }
            }
            compared2={
                        Object {
                                    "districtAvg": "",
                                    "location": "",
                                    "stats": Object {},
                                  }
            }
            comparedAvg={
                        Object {
                                    "ASPEN": 0.8,
                                    "Colorado": 0.5,
                                    "comparedd": 0.65,
                                  }
            }
/>,
          <div
            className="comparison-placeholder"
>
            Select a district to compare
</div>,
        ],
        "className": "comparison-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "compareDistrict": undefined,
            "districtData": Object {
              "districtAvg": 0.5,
              "location": "Colorado",
              "stats": Object {
                "2006": 0.5,
              },
            },
            "selected": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "compared1": Object {
              "districtAvg": 0.5,
              "location": "Colorado",
              "stats": Object {
                "2006": 0.5,
              },
            },
            "compared2": Object {
              "districtAvg": "",
              "location": "",
              "stats": Object {},
            },
            "comparedAvg": Object {
              "ASPEN": 0.8,
              "Colorado": 0.5,
              "comparedd": 0.65,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Select a district to compare",
            "className": "comparison-placeholder",
          },
          "ref": null,
          "rendered": "Select a district to compare",
          "type": "div",
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Comparison Container should match the snapshot with or without data 4`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ComparisonContainer
    compareDistrict={[Function]}
    compared1={undefined}
    compared2={
        Object {
            "districtAvg": 0.8,
            "location": "ASPEN",
            "stats": Object {
              "2006": 0.8,
            },
          }
    }
    comparedAvg={
        Object {
            "ASPEN": 0.8,
            "Colorado": 0.5,
            "comparedd": 0.65,
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="comparison-placeholder"
>
          Select a district to compare
</div>,
        <ComparisonWindow
          compared1={
                    Object {
                              "districtAvg": "",
                              "location": "",
                              "stats": Object {},
                            }
          }
          compared2={
                    Object {
                              "districtAvg": 0.8,
                              "location": "ASPEN",
                              "stats": Object {
                                "2006": 0.8,
                              },
                            }
          }
          comparedAvg={
                    Object {
                              "ASPEN": 0.8,
                              "Colorado": 0.5,
                              "comparedd": 0.65,
                            }
          }
/>,
        <District
          compareDistrict={[Function]}
          districtData={
                    Object {
                              "districtAvg": 0.8,
                              "location": "ASPEN",
                              "stats": Object {
                                "2006": 0.8,
                              },
                            }
          }
          selected={true}
/>,
      ],
      "className": "comparison-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Select a district to compare",
          "className": "comparison-placeholder",
        },
        "ref": null,
        "rendered": "Select a district to compare",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "compared1": Object {
            "districtAvg": "",
            "location": "",
            "stats": Object {},
          },
          "compared2": Object {
            "districtAvg": 0.8,
            "location": "ASPEN",
            "stats": Object {
              "2006": 0.8,
            },
          },
          "comparedAvg": Object {
            "ASPEN": 0.8,
            "Colorado": 0.5,
            "comparedd": 0.65,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "compareDistrict": [Function],
          "districtData": Object {
            "districtAvg": 0.8,
            "location": "ASPEN",
            "stats": Object {
              "2006": 0.8,
            },
          },
          "selected": true,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="comparison-placeholder"
>
            Select a district to compare
</div>,
          <ComparisonWindow
            compared1={
                        Object {
                                    "districtAvg": "",
                                    "location": "",
                                    "stats": Object {},
                                  }
            }
            compared2={
                        Object {
                                    "districtAvg": 0.8,
                                    "location": "ASPEN",
                                    "stats": Object {
                                      "2006": 0.8,
                                    },
                                  }
            }
            comparedAvg={
                        Object {
                                    "ASPEN": 0.8,
                                    "Colorado": 0.5,
                                    "comparedd": 0.65,
                                  }
            }
/>,
          <District
            compareDistrict={[Function]}
            districtData={
                        Object {
                                    "districtAvg": 0.8,
                                    "location": "ASPEN",
                                    "stats": Object {
                                      "2006": 0.8,
                                    },
                                  }
            }
            selected={true}
/>,
        ],
        "className": "comparison-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Select a district to compare",
            "className": "comparison-placeholder",
          },
          "ref": null,
          "rendered": "Select a district to compare",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "compared1": Object {
              "districtAvg": "",
              "location": "",
              "stats": Object {},
            },
            "compared2": Object {
              "districtAvg": 0.8,
              "location": "ASPEN",
              "stats": Object {
                "2006": 0.8,
              },
            },
            "comparedAvg": Object {
              "ASPEN": 0.8,
              "Colorado": 0.5,
              "comparedd": 0.65,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "compareDistrict": [Function],
            "districtData": Object {
              "districtAvg": 0.8,
              "location": "ASPEN",
              "stats": Object {
                "2006": 0.8,
              },
            },
            "selected": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
